--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -2,16 +2,24 @@
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% load render_table from django_tables2 %}
-  {% if course.collectableassignments %}
     <div class="alert alert-warning">Select assignments to collect right now.</div>
     <h5>Mass assignments</h5>
+  {% if t_collect_mass.data|length > 0 %}
     {% render_table t_collect_mass %}
+  {% else %}
+    <div class="alert alert-warning">There are no mass assignment candidates to collect yet.</div>
+  {% endif %}
+
     <h5>Petrsonal assignments</h5>
+  {% if t_collect_personal.data|length > 0 %}
     {% render_table t_collect_personal %}
+  {% else %}
+    <div class="alert alert-warning">There are no personal assignment candidates to collect yet.</div>
+  {% endif %}
+
+  {% if t_collect_mass.data|length > 0 or t_collect_personal.data|length > 0 %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Collect</button>
     </div>
-  {% else %}
-    <div class="alert alert-warning">There are no candidate assignments to collect yet.</div>
   {% endif %}
 </form>
