--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -5,7 +5,7 @@
     <div class="alert alert-warning">Select user assignments you finished correcting.</div>
     {% render_table t_feedback %}
     <div class="modal-footer">
-      <button type="submit" class="btn btn-default" name="button" value="apply"> Feedback</button>
+      <button type="submit" class="btn btn-default" name="button" value="apply"> Apply</button>
     </div>
   {% else %}
     <div class="alert alert-warning">There are no assignments being corrected.</div>
